istio-config/a-b-virtual-service-with-timeout.yml
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: backend
# spec:
#   host: backend
#   subsets:
#   - name: v1
#     labels:
#       app: backend
#       version: 1.0.0
#     trafficPolicy:
#       loadBalancer:
#         simple: ROUND_ROBIN
#   - name: v2
#     labels:
#       app: backend
#       version: 2.0.0
#     trafficPolicy:
#       loadBalancer:
#         simple: ROUND_ROBIN
#   - name: v3
#     labels:
#       app: backend
#       version: 3.0.0
#     trafficPolicy:
#       loadBalancer:
#         simple: ROUND_ROBIN
    
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-virtual-service
spec:
  hosts:
  - backend
  http:
  - timeout: 3s
    route:
    - destination:
        host: backend
        subset: v1
      weight: 50
    - destination:
        host: backend
        subset: v2
      weight: 50
    # retries:
    #   attempts: 1
    #   perTryTimeout: 2s
